--- a/main.tex
+++ b/main.tex
@@ -669,11 +669,11 @@ Assume $|\nabla_{1,2}^2k(\cdot,\cdot)|\leq C$, then
   So if $\gamma$ is small enough, s.t 
   
   \begin{equation}
-    \frac{\gamma}{2p}\cdot(C_1+C_2\cdot \int|\nabla\log(\pi(x))|\mu_n(x)dx+C_3\cdot (\int|\nabla\log(\pi(x))|\mu_n(x)dx)^2+C^{\prime}_1+C^{\prime}_2\cdot \int|\nabla\log(\sigma_{I^{\prime}}(x))|\mu_n(x)dx+C^{\prime}_3\cdot (\int|\nabla\log(\sigma_{I^{\prime}}(x))|\mu_n(x)dx)^2)-(\frac{1}{2\gamma}-\frac{C}{2})\leq 0,
+    \frac{\gamma}{2p}\cdot(C_1+C_2\cdot \int|\nabla\log(\pi(x))|\mu_n(x)dx+C_3\cdot (\int|\nabla\log(\pi(x))|\mu_n(x)dx)^2+C^{\prime}_1+C^{\prime}_2\cdot \int|\nabla\log(\sigma_{I^{\prime}}(x))|d\mu_n(x)+C^{\prime}_3\cdot (\int|\nabla\log(\sigma_{I^{\prime}}(x))|\mu_n(x)dx)^2)-(\frac{1}{2\gamma}-\frac{C}{2})\leq 0,
   \end{equation}
   Then
   \begin{equation}
-    \bE(\Phi_{n+1})\leq \textbf{E}(\Phi_n)-\frac{\gamma}{2}\textbf{E}\left\|S_{\mu_n}\nabla\log(\frac{\mu_n}{\pi}})\right\|_H^2,
+    \bE(\Phi_{n+1}) \leq \bE(\Phi_n)-\frac{\gamma}{2}\bE \sqN{S_{\mu_n}\nabla\log(\frac{\mu_n}{\pi})},
   \end{equation}
   \end{proof}
   
